# OCR_Block

./: README.md  annotate.py  batch_annotate.py  pyproject.toml
document/: exp_251205.md
outputs/: MCP16502_final_annotation.json  MCP16502_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MCP16502_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MCP16502_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT6572_final_annotation.json  MT6572_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT6572_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT6572_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT6797_final_annotation.json  MT6797_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT6797_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT6797_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT7620_final_annotation.json  MT7620_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT7620_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT7620_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT7621_final_annotation.json  MT7621_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT7621_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT7621_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT7931AN_final_annotation.json  MT7931AN_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT7931AN_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT7931AN_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT7988A_final_annotation.json  MT7988A_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT7988A_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT7988A_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MT8395_final_annotation.json  MT8395_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MT8395_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MT8395_intermediate_anthropic_claude-sonnet-4.5_pass3.json  MX68GL1G0F_final_annotation.json  MX68GL1G0F_intermediate_anthropic_claude-sonnet-4.5_pass1.json  MX68GL1G0F_intermediate_anthropic_claude-sonnet-4.5_pass2.json  MX68GL1G0F_intermediate_anthropic_claude-sonnet-4.5_pass3.json  STM32L475xx_final_annotation.json  STM32f446mc_final_annotation.json  STM32f446mc_intermediate_anthropic_claude-sonnet-4.5_pass1.json  batch_summary.json
